Trying to fix the viewing of hero on mobile(Changes to html hero class and changes here section in css file)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -120,7 +120,7 @@ nav ul li {
 @media screen and (max-width: 720px) {
   .hero img {
     height: auto;
-    width: 100%;
+    width: 100% !important;
   }
 }
 
